# PlanMiner

./: .gitignore  BL.pddl  CMakeLists.txt  CompareDoms.py  Doxyfile.in  README.md  lanzartodo.sh  prueba.pddl  pruebaRuid.pddl  traza.txt
Data/: plantrace.txt
Data/Depots/: depostgenerator.cc
Data/DriverLog/: domain.pddl  drivergenerator.cc
Data/Parking/: domain.pddl  parkinggenerator.pl
Data/Satellite/: satellitegenerator.cc
Data/Scripts/: addIncompleteness.py  addNoise.py
Data/Zenotravel/: domain.pddl  zenotravelgenerator.cc
ResultadosRuidoCon/: ErroresRuidoL-Depots.csv  ErroresRuidoL-DriverLog.csv  ErroresRuidoL-Satellite.csv  ErroresRuidoL-Zenotravel.csv  ErroresRuidoN-Depots.csv  ErroresRuidoN-DriverLog.csv  ErroresRuidoN-Satellite.csv  ErroresRuidoN-Zenotravel.csv  ValidaciónRuidoL-Depots.csv  ValidaciónRuidoL-DriverLog.csv  ValidaciónRuidoL-Satellite.csv  ValidaciónRuidoL-Zenotravel.csv  ValidaciónRuidoN-Depots.csv  ValidaciónRuidoN-DriverLog.csv  ValidaciónRuidoN-Satellite.csv  ValidaciónRuidoN-Zenotravel.csv
ResultadosRuidoSin/: ErroresRuidoL-Depots.csv  ErroresRuidoL-DriverLog.csv  ErroresRuidoL-Satellite.csv  ErroresRuidoL-Zenotravel.csv  ErroresRuidoN-Depots.csv  ErroresRuidoN-DriverLog.csv  ErroresRuidoN-Satellite.csv  ErroresRuidoN-Zenotravel.csv  ValidaciónRuidoL-Depots.csv  ValidaciónRuidoL-DriverLog.csv  ValidaciónRuidoL-Satellite.csv  ValidaciónRuidoL-Zenotravel.csv  ValidaciónRuidoN-Depots.csv  ValidaciónRuidoN-DriverLog.csv  ValidaciónRuidoN-Satellite.csv  ValidaciónRuidoN-Zenotravel.csv
Test/: ZenoTest.pts  ZenoTestIncomplete.pts  ZenoTestNoise.pts
gtest/tmp/: gtest-cfgcmd.txt  gtest-gitclone.cmake  gtest-gitupdate.cmake
include/: Cleaner.hpp  DataSLib.hpp  Discretize.hpp  ParsePT.hpp  PlanTrace.hpp  PtLib.hpp  RuleCreator.hpp  RuleLib.hpp  StateLib.hpp  TSLinker.hpp  TaskLib.hpp  ToTable.hpp  TypeHierarchyCalc.hpp  fuseRules.hpp  groupTS.hpp
include/Datasets/: Utils.hpp
include/INSLV/: Relaciones.h  VectorVar.h  domain_t.h  example_set.h  fuzzy_t.h  genetcode.h  multipoblacion.h  operaciones.h  poblacionbinaria.h  poblacionentera.h  poblacionreal.h  ruleset.h  variable_t.h  vectordouble.h
include/PlanTraces/: PlanTrace.hpp  Utils.hpp
include/Rules/: FuseRules.hpp  RuleCreator.hpp
include/State/: Atom.hpp  Conector.hpp  Function.hpp  Predicate.hpp  State.hpp  TSLinker.hpp
include/Task/: Parameter.hpp  PrimitiveTask.hpp  Task.hpp
res/: board.res  debark.res  fly.res  refuel.res  zoom.res
src/: Cleaner.cpp  Discretize.cpp  ParsePT.cpp  PlanTrace.cpp  RuleCreator.cpp  TSLinker.cpp  ToTable.cpp  TypeHierarchyCalc.cpp  fuseRules.cpp  groupTS.cpp
src/Datasets/: Utils.cpp
src/INSLV/: Relaciones.cpp  VectorVar.cpp  domain_t.cpp  example_set.cpp  fuzzy_t.cpp  genetcode.cpp  multipoblacion.cpp  operaciones.cpp  poblacionbinaria.cpp  poblacionentera.cpp  poblacionreal.cpp  ruleset.cpp  variable_t.cpp  vectordouble.cpp
src/PlanTraces/: PlanTrace.cpp  Utils.cpp
src/Rules/: FuseRules.cpp  RuleCreator.cpp
src/State/: Atom.cpp  Conector.cpp  Function.cpp  Predicate.cpp  State.cpp  TSLinker.cpp
src/Task/: Parameter.cpp  PrimitiveTask.cpp  Task.cpp
